fixed minor bugs and added ability to decline list-invitation
